app/assets/stylesheets/shared.css.scss
$white: #fff;
$grey: rgb(209, 217, 220);

// brand colors
$minnebar-purple: #6066ae;
$minnestar-red: #f05555;
$minnestar-purple: #44478a;
$minnestar-blue: #0994ca;

@mixin columns($width, $gap) {
  column-width: $width;
  column-gap: $gap;
  -moz-column-width: $width;
  -moz-column-gap: $gap;
  -webkit-column-width: $width;
  -webkit-column-gap: $gap;
}

body {
  background-color: #fff;
  font-family: "proxima-nova", helvetica, sans-serif;
  margin: 0;
  color: #111111;
  line-height:1.5em;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

main {
  flex: 1;
}

h1, h2, h3, h4, h5, h6 {
  font-family: "Roboto", sans-serif;
  margin: 0;
}

h1 {
  margin: 1.5em 0 0 0;
  font: 700 24px / 24px;
  color: #666;
  text-transform: uppercase;
  span.edit {
    font-size: 50%;
    color: gray;
  }
}

h3 span.edit {
  font-size: 75%;
  color: gray;
}

h2 {
  margin: 10px 0;
  font: 300 18px / 18px;
  color: #666;
  text-transform: uppercase;
}

a {
  img {
    border: none;
  }
  color: $minnestar-red;
}

.clear {
  clear: both;
  height: 0;
  overflow: hidden;
}

#container {
  width: 75%;
  margin: 0 auto;
  background-color: #FFF;
  padding: 20px 40px;
  border: none;
  margin-top: 20px;
}

#flash_notice, #flash_error, #flash_alert {
  padding: 5px 8px;
  margin: 10px 0;
}

#flash_notice {
  background-color: #CFC;
  border: solid 1px #6C6;
}

#flash_error {
  background-color: #FCC;
  border: solid 1px #C66;
}

#flash_alert {
  background-color: #FEC;
  border: solid 1px #E96;
}

.fieldWithErrors {
  display: inline;
}

#errorExplanation {
  width: 400px;
  border: 2px solid #CF0000;
  padding: 0px;
  padding-bottom: 12px;
  margin-bottom: 20px;
  background-color: #f0f0f0;
  h2 {
    text-align: left;
    font-weight: bold;
    padding: 5px 5px 5px 15px;
    font-size: 12px;
    margin: 0;
    background-color: #c00;
    color: #fff;
  }
  p {
    color: #333;
    margin-bottom: 0;
    padding: 8px;
  }
  ul {
    margin: 2px 24px;
    li {
      font-size: 12px;
      list-style: disc;
    }
  }
}

input:not([type=checkbox]) {
  min-height: 2em;
}

a.button,
button.button,
input[type="submit"].button {
  font-family: 'Roboto', sans-serif;
  border: 2px solid $minnestar-red;
  border-radius: 6px;
  color: #949494;
  padding: 7px 10px 6px;
  background: transparent;
  text-transform: uppercase;
  text-decoration: none;

  .title {
    padding: 10px;
    float: left;
    font-size: 1.25em;
    font-weight: 800;
  }

  .meta {
    text-indent: -9999px;
    padding: 0.7em;
    margin: 0.2em;
    background: image-url("session-attending-true.svg") no-repeat;
    background-size: contain;
    width: 1.6em;
    float: left;
  }
}
a.button:hover, a.button:focus,
button.button:hover, button.button:focus,
input[type="submit"].button:hover, input[type="submit"].button:focus {
  background: $minnestar-red;
  color: #fefefe;
  box-shadow: none;
}

div.sidebar-box {
  background: none repeat scroll 0 0 #5f66af;
  border-radius: 3px;
  padding: 20px 15px;
  color: #fff;
  line-height: 1.6em;
  h3 {
    text-transform: uppercase;
    font-size: 1.25em;

  }

  a {
    text-decoration: underline;
    color: #fff;
    font-weight: 700;
  }
}

ul.sessionsList {
  display: grid;
  grid-template-columns: 1fr 1fr;
  column-gap: 1em;
  row-gap: 0.5em;
  margin: 0;
  padding: 0;
  padding-right: 2.2em;
  list-style-type: none;

  li.attending {
    background: image-url("minnebar.png") no-repeat 0 .1em;
  }
  li {
    margin: 0.6em 0;
    padding-left: 2.2em;
    padding-right: 1em;
    display: inline-block;  // prevent column break
    width: 100%;

    @media screen and (max-width: 65em) {
        padding-left: 0;
    }
    a {
      &:link, &:visited {
        font: 700 1.2em / 1.2em;
        color: #666;
        text-decoration: none;
      }
      &:hover, &:active {
        text-decoration: underline;
      }
    }
    div.presenter {
      font-size: 0.95em;
      color: #AAA;
      a {
        &:link, &:visited {
          color: #949494;
          text-decoration: none;
        }
        &:hover, &:active {
          text-decoration: underline;
        }
      }
    }
  }

  @media screen and (max-width: 65em) {
      grid-template-columns: 1fr;
  }
}

.toggle-attendance {
  display: inline-block;
  border: none;
  outline: none;
  padding: 0;
  margin: 0;

  width: 1.8em;
  height: 1.8em;
  margin-bottom: -1.8em;
  float: left;
  position: relative;
  left: -2.2em;
  top: 0.1em;

  color: transparent;  // Text is for accessibility only

  background-color: transparent;
  background-size: contain;
  background-repeat: no-repeat;
  &[data-session-attending="true"] {
    background-image: image-url("session-attending-true.svg");
  }
  &[data-session-attending="false"] {
    background-image: image-url("session-attending-false.svg");
  }
  &.loading {
    background-image: image-url("loading.svg") !important;
    pointer-events: none;
  }
}

.clearboth {
  clear: both;
}

.more_sessions {
  padding-left: 1.8em;
}

h4 + p {
  margin-top:0em;
}

hr {
  color: $grey;
  background-color: $grey;
  height: 1px;
  border: 0;
  margin: 2em 0;
}

.left  { float:left; }
.right { float:right; }

h4 {
  font-size: 1.1em;
}

.smaller {
  font-size: 0.8em;
}

.page-title {
  margin: 5px 0;
  line-height: initial;
}

.participant-links {
  float: right;
  margin: 14px 0;
}

.page-heading {
  margin-bottom: 1rem;
}

